ParcialTeleco2/before.rules
# NAT table rules
*nat

:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Forward traffic from port 80 to port 80.
-A PREROUTING -p tcp --dport 80 -j DNAT --to-destination 192.168.50.2:80

# Forward traffic from port 21 to port 21.
-A PREROUTING -i eth2 -p tcp --dport 21 -j DNAT --to-destination 192.168.50.2:21
-A PREROUTING -i eth2 -p tcp --dport 40000:50000 -j DNAT --to-destination 192.168.50.2

# Don't masquerade local traffic.
-A POSTROUTING -s 192.168.50.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.1.0/24 -j MASQUERADE

# Abrir los puertos 20,21 y 40000 a 50000 ----- Es EQUIVALENTE a habilitar las reglas del ufw con 'ufw allow 21/tcp'
-A INPUT -p tcp --dport 20 -j ACCEPT
-A INPUT -p tcp --dport 21 -j ACCEPT
-A INPUT -p tcp --dport 40000:50000 -j ACCEPT

COMMIT
